# mcp-agent-factory

./: .env.example  .gitignore  .mcp.json  .mcp.json.template  Caddyfile  Dockerfile  README.md  docker-compose.yml  mcp.json  pyproject.toml  setup-mcp.sh
.bg-shell/: manifest.json
.gsd/: CODEBASE.md  DECISIONS.md  KNOWLEDGE.md  PREFERENCES.md  PROJECT.md  REQUIREMENTS.md  STATE.md  doctor-history.jsonl  event-log.jsonl  gsd.db  last-snapshot.md  mcp.json  metrics.json  notifications.jsonl  preferences.md  repo-meta.json  state-manifest.json
.gsd/activity/: 001-research-milestone-M001.jsonl  002-plan-milestone-M001.jsonl  003-plan-slice-M001-S01.jsonl  004-execute-task-M001-S01-T01.jsonl  005-execute-task-M001-S01-T02.jsonl  006-complete-slice-M001-S01.jsonl  007-research-slice-M001-S02.jsonl  008-plan-slice-M001-S02.jsonl  009-execute-task-M001-S02-T01.jsonl  010-execute-task-M001-S02-T02.jsonl  011-complete-slice-M001-S02.jsonl  012-research-slice-M001-S03.jsonl  013-plan-slice-M001-S03.jsonl  014-execute-task-M001-S03-T01.jsonl  015-execute-task-M001-S03-T02.jsonl  016-complete-slice-M001-S03.jsonl  017-validate-milestone-M001.jsonl  018-complete-milestone-M001.jsonl
.gsd/audit/: events.jsonl
.gsd/debug/sessions/: in-contrast-to-the-current-readme-md-please-make-sure-that-key-v.json  (+1 more)
.gsd/journal/: 2026-03-26.jsonl
docs/: security_audit.md
observability/: otel-collector.yml  prometheus.yml
scripts/: demo.sh  demo_analyst.py  smoke_test.sh
src/mcp_agent_factory/: __init__.py  adapters.py  models.py  orchestrator.py  react_loop.py  scheduler.py  server.py  server_http.py  server_http_secured.py
src/mcp_agent_factory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mcp_agent_factory/kv/: store.py  (+1 more)
tests/: conftest.py  conftest_integration.py  test_adapters.py  test_agents_dispatch.py  test_auth.py  test_cursor_connect.py  test_e2e_routing.py  test_economics.py  test_gateway.py  test_ingest.py  test_integration.py  test_knowledge_auction.py  test_kv_store.py  test_kv_tools.py  test_langchain_bridge.py  test_m004_auth_pkce.py  test_m004_client_bridge.py  test_m004_sse.py  test_m006_eventlog.py  test_m006_gateway.py  test_m006_integration.py  test_m006_reliability.py  test_m006_streams.py  test_m007_kafka.py  test_m007_redlock.py  test_m007_scaling.py  test_m008_integration.py  test_m009_s01.py  test_m009_s02.py  test_m009_s03.py  test_m009_s04.py  test_m009_s05.py  test_m010_s01.py  test_m010_s02.py  test_m011_otel_integration.py  test_mcp_lifecycle.py  test_message_bus.py  test_otel_spans.py  test_pipeline.py  test_react_loop.py  (+5 more)
(+429 files in other folders)
