[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-agent-factory"
version = "0.1.0"
description = "Industrial-grade Multi-Agent Orchestrator using Model Context Protocol"
requires-python = ">=3.11"
dependencies = ["redis>=5", "python-dotenv>=1.0", "httpx>=0.27", "pypdf>=4.0"]

[project.scripts]
mcp-sim-server = "mcp_agent_factory.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "fakeredis>=2.0"]
infra = ["aiokafka>=0.10"]
ml = ["sentence-transformers>=2.2"]
otel = [
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
    "prometheus-fastapi-instrumentator>=6.1",
    "prometheus_client>=0.20",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
	"integration: marks tests as requiring a live Docker stack (deselect with '-m not integration')",
]
